add_subdirectory(lib)
add_subdirectory(components)
add_subdirectory(i_components)
add_subdirectory(cython)
add_subdirectory(utils)
add_subdirectory(user_comps)
add_subdirectory(drivers)

_to_rtlib(scope_rt utils/scope_rt.c)
_to_rtlib(jplan jplanner/jplan.c)
_to_rtlib(sample_channel_pb sample_channel/sample_channel_pb.c)
_to_rtlib(interpolate interpolator/interpolate.c)
_to_rtlib(icomp icomp-example/icomp.c)
_to_rtlib(lutn-demo icomp-example/lutn-demo.c)
_to_rtlib(ufdemo userfunct-example/ufdemo.c)
_to_rtlib(vtuse vtable-example/vtuse.c)
_to_rtlib(vtexport vtable-example/vtexport.c vtable-example/vcode.c)
_to_rtlib(watch user_icomps/watch.c)

add_dependencies(jplan npb_gen_files)
add_dependencies(sample_channel_pb npb_gen_files)
add_dependencies(interpolate npb_gen_files)
